# Rust-

./: .gitignore  README.md  package.json
backend/: .env.example  Cargo.toml
backend/agent-service/: package-lock.json  package.json
backend/agent-service/src/: server.ts
backend/src/: ai.rs  analysis.rs  auth.rs  main.rs  models.rs  routes.rs  store.rs  text.rs
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/agent/chat/: route.ts
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  separator.tsx  textarea.tsx
frontend/lib/: api.ts
frontend/lib/agents/: research-agent.ts
