[package]
name = "paperlens-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["multipart", "json", "tokio"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
headers = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
pdf-extract = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
rand = "0.8"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8", "with-serde_json-1", "with-chrono-0_4", "runtime"] }
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
native-tls = "0.2"
jsonwebtoken = "8"
